syntax = "proto3";

//Diretrizes
option java_multiple_files = true; //Gerar arquivos separados
option java_package = "br.com.pix.grpc"; //Pacote onde será gerado as classes
option java_outer_classname = "KeymanagerGrpc"; //Classe que guardará todos os metadados quando o "java_multiple_files" for false
option objc_class_prefix = "HLW";

package br.com.pix.grpc; //pacote onde as classes serão geradas

service KeymanagerRegistraGrpcService {
  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

enum TipoDeChave {
  UNKNOWN_TIPO_CHAVE = 0; //0 - default enum
  CPF = 1;
  PHONE = 2;
  EMAIL = 3;
  RANDOM = 4;
}

enum TipoDeConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest {
  string clientId = 1;
  TipoDeChave tipoDeChave = 2;
  string chave = 3;
  TipoDeConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string clientId = 1;
  string pixId = 2;
}